3_networking/ingress-nginx/01-voting-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app
  namespace: demo-voting-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: demo-vote.localhost
      http:
        paths:
          - path: /result(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: result
                port:
                  number: 80
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vote
                port:
                  number: 80
